<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="185dp"
        tools:layout_editor_absoluteY="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/hotel_search_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/title_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/welcome_text"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="22sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/guest_name_text_view"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:labelFor="@+id/guest_name_edit_text"
                android:text="@string/guest_name"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@id/guest_name_edit_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guest_name_edit_text" />

            <EditText
                android:id="@+id/guest_name_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="10dp"
                android:autofillHints="Name of Person who Reserve"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/guest_name_text_view"
                app:layout_constraintTop_toBottomOf="@id/title_text_view" />

            <TextView
                android:id="@+id/n_guests_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:labelFor="@id/n_guests_edit_text"
                android:text="@string/number_of_guests"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@id/n_guests_edit_text"
                app:layout_constraintEnd_toEndOf="@id/guest_name_text_view"
                app:layout_constraintStart_toStartOf="@id/guest_name_text_view"
                app:layout_constraintTop_toTopOf="@+id/n_guests_edit_text" />

            <EditText
                android:id="@+id/n_guests_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:autofillHints="Number of Guests"
                android:digits="0123456789"
                android:inputType="number"
                app:layout_constraintEnd_toEndOf="@id/guest_name_edit_text"
                app:layout_constraintStart_toEndOf="@id/n_guests_text_view"
                app:layout_constraintTop_toBottomOf="@id/guest_name_edit_text" />

            <TextView
                android:id="@+id/check_in_date_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:labelFor="@id/check_in_date_text_view"
                android:text="@string/check_in_date"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@id/check_in_date_edit_text"
                app:layout_constraintEnd_toEndOf="@id/guest_name_text_view"
                app:layout_constraintStart_toStartOf="@id/guest_name_text_view"
                app:layout_constraintTop_toTopOf="@id/check_in_date_edit_text" />

            <EditText
                android:id="@+id/check_in_date_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:autofillHints="Check in Date"
                android:inputType="date"
                app:layout_constraintEnd_toEndOf="@id/guest_name_edit_text"
                app:layout_constraintStart_toEndOf="@id/check_in_date_text_view"
                app:layout_constraintTop_toBottomOf="@id/n_guests_edit_text" />

            <TextView
                android:id="@+id/check_out_date_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:labelFor="@id/check_out_date_text_view"
                android:text="@string/check_out_date"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@id/check_out_date_edit_text"
                app:layout_constraintEnd_toEndOf="@id/guest_name_text_view"
                app:layout_constraintStart_toStartOf="@id/guest_name_text_view"
                app:layout_constraintTop_toTopOf="@id/check_out_date_edit_text" />

            <EditText
                android:id="@+id/check_out_date_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:autofillHints="Check out Date"
                android:inputType="date"
                app:layout_constraintEnd_toEndOf="@id/guest_name_edit_text"
                app:layout_constraintStart_toEndOf="@id/check_in_date_text_view"
                app:layout_constraintTop_toBottomOf="@id/check_in_date_edit_text" />

            <Button
                android:id="@+id/search_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/search"
                app:layout_constraintStart_toStartOf="@id/guest_name_text_view"
                app:layout_constraintTop_toBottomOf="@+id/check_out_date_edit_text" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>